# research-project-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  LICENSE  Makefile  README.md  pyproject.toml
.cursor/: hooks.json  mcp.json
.cursor/agents/: research-advisor.md  research-engineer.md  research-reviewer.md  research-scholar.md  research-writer.md
.cursor/commands/: design-experiments.md  literature-review.md  project-setup.md  review-paper.md  whats-next.md  write-paper.md
.cursor/hooks/: guard_risky_shell.py  protect_sensitive_files.py  session_memory.py
.cursor/rules/: base  research-project.mdc
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  epic.yml  feature.yml  roadmap.yml  task.yml
.github/workflows/: ci.yml
_bmad-research-project/: LICENSE  README.md  TODO.md  module.yaml
_bmad-research-project/_module-installer/: installer.js
_bmad-research-project/agents/: README.md  research-advisor.yaml  research-engineer.yaml  research-reviewer.yaml  research-scholar.yaml  research-writer.yaml
_bmad-research-project/data/: conference-requirements.md  interpretability-tools-reference.md  reproducibility-checklist.md  tools-reference.md
_bmad-research-project/templates/: experiment-template.md  literature-review-template.md  paper-outline-template.md  paper-review-template.md
_bmad-research-project/workflows/: README.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/bmb/: config.yaml
_bmad/core/: config.yaml
_bmad/research-project/: README.md  config.yaml  module-plan-research-project.md
configs/: demo.yaml  dispatch_experiment.yaml  loss.yaml  run_experiment.yaml
configs/demo/: 2026-06-23-smoke.yaml  base.yaml
configs/group1/: second.yaml  third.yaml
configs/group2/: base.yaml
docs/: AGENTS.md  README.md
docs/claims/: AGENTS.md
docs/decisions/: AGENTS.md
docs/reviews/: AGENTS.md
latex/: .gitignore  AGENTS.md  custom.bib  main.tex  semantic.bib
launch/: README.md  loss-cv.sh  loss-jz.sh
notebooks/: README.md  create-kernel.sh  loss.ipynb
scripts/: demo.py  dispatch_experiment.py  loss.py  run_experiment.py
tests/: conftest.py
typst/: .gitignore  custom.bib  main.typ
(+236 files in other folders)
