[project]
name = "research-project-template"
version = "0.1.0"
description = "KISS research project template built for Cursor IDE, Python, and LaTeX."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = ""},
]
requires-python = ">=3.11"
dependencies = [
    "hydra-core",
    "hydra-optuna-sweeper",
    "hydra-submitit-launcher",
    "ipykernel",
    "loguru",
    "wandb",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[build]
target-dir = "build/dist"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 119
target-version = "py311"
